bitwarden-attachments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bw-attachments
  namespace: bitwarden
spec:
  selector:
    matchLabels:
      app: bw-attachments
  template:
    metadata:
      labels:
        app: bw-attachments
    spec:
      containers:
      - name: bw-attachments
        image: bitwarden/attachments
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: attachments
          mountPath: /etc/bitwarden/core/attachments
      volumes:
      - name: attachments
        nfs:
          server: 10.43.235.63
          path: /core/attachments
