bitwarden-events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bw-events
  namespace: bitwarden
spec:
  strategy: 
    type: Recreate
  replicas: 1  
  selector:
    matchLabels:
      app: bw-events
  template:
    metadata:
      labels:
        app: bw-events
    spec: 
      containers:
      - name: bw-events
        image: bitwarden/events
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: certs
          mountPath: /etc/bitwarden/ca-certificates     
        - name: logs
          mountPath: /etc/bitwarden/logs                          
      volumes:
      - name: certs
        nfs:
          server: 10.43.235.63
          path: /ca-certificates                    
      - name: logs
        nfs:
          server: 10.43.235.63
          path: /logs/events
