bitwarden-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bw-nginx
  namespace: bitwarden
spec:
  strategy: 
    type: Recreate
  replicas: 1  
  selector:
    matchLabels:
      app: bw-nginx
  template:
    metadata:
      labels:
        app: bw-nginx
    spec: 
      containers:
      - name: bw-nginx
        image: bitwarden/nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: nginx
          mountPath: /etc/bitwarden/nginx
        - name: letsencrypt
          mountPath: /etc/letsencrypt 
        - name: ssl
          mountPath: /etc/ssl                     
        - name: logs
          mountPath: /var/log/nginx                          
      volumes:
      - name: nginx
        nfs:
          server: 10.43.235.63
          path: /nginx    
      - name: letsencrypt
        nfs:
          server: 10.43.235.63
          path: /letsencrypt
      - name: ssl
        nfs:
          server: 10.43.235.63
          path: /ssl                                   
      - name: logs
        nfs:
          server: 10.43.235.63
          path: /logs/nginx
