bitwarden-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bw-setup
  namespace: bitwarden
spec:
  strategy: 
    type: Recreate
  replicas: 1  
  selector:
    matchLabels:
      app: bw-setup
  template:
    metadata:
      labels:
        app: bw-setup
    spec: 
      containers:
      - name: bw-setup
        image: bitwarden/setup
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
        command: ['sh','-c', 'sleep 1d']
        volumeMounts:
        - name: setup
          mountPath: /bitwarden
      volumes:
      - name: setup
        nfs:
          server: "10.43.42.45"
          path: /bwdata
