bitwarden-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bw-api
  namespace: bitwarden
spec:
  selector:
    matchLabels:
      app: bw-api
  template:
    metadata:
      labels:
        app: bw-api
    spec:
      containers:
      - name: bw-api
        image: bitwarden/api
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: api
          mountPath: /etc/bitwarden/core 
        - name: certs
          mountPath: /etc/bitwarden/ca-certificates
        - name: logs
          mountPath: /etc/bitwarden/logs                               
      volumes:
      - name: api
        nfs:
          server: 10.43.42.45
          path: /bwdata/core
      - name: certs
        nfs:
          server: 10.43.42.45
          path: /bwdata/ca-certificates     
      - name: logs
        nfs:
          server: 10.43.42.45
          path: /bwdata/logs/api
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: bitwarden
spec:
  selector:
    app: bw-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
