bitwarden-identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bw-identity
  namespace: bitwarden
spec:
  strategy: 
    type: Recreate
  replicas: 1  
  selector:
    matchLabels:
      app: bw-identity
  template:
    metadata:
      labels:
        app: bw-identity
    spec: 
      containers:
      - name: bw-identity
        image: bitwarden/identity
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 5000

        volumeMounts:
        - name: identity
          mountPath: /etc/bitwarden/identity
        - name: core
          mountPath: /etc/bitwarden/core
        - name: certs
          mountPath: /etc/bitwarden/ca-certificates     
        - name: logs
          mountPath: /etc/bitwarden/logs                          
      volumes:
      - name: identity
        nfs:
          server: 10.43.42.45
          path: /bwdata/identity
      - name: core
        nfs:
          server: 10.43.42.45
          path: /bwdata/core
      - name: certs
        nfs:
          server: 10.43.42.45
          path: /bwdata/ca-certificates                    
      - name: logs
        nfs:
          server: 10.43.42.45
          path: /bwdata/logs/identity         
---
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: bitwarden
spec:
  selector:
    app: bw-identity
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
