bitwarden-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bw-web
  namespace: bitwarden
spec:
  strategy: 
    type: Recreate
  replicas: 1 
  selector:
    matchLabels:
      app: bw-web
  template:
    metadata:
      labels:
        app: bw-web
    spec: 
      containers:
      - name: bw-web
        image: bitwarden/web
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: web
          mountPath: /etc/bitwarden/web
      volumes:
      - name: web
        nfs:
          server: 10.43.42.45
          path: /bwdata/web
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: bitwarden
spec:
  selector:
    app: bw-web
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
