nfs-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: bitwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server             # <- no more replicas
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: itsthenetwork/nfs-server-alpine:latest
        volumeMounts:
        - name: nfs-storage
          mountPath: /nfsshare
        ports:
        - name: nfs  
          containerPort: 2049   # <- export port
        securityContext:
          privileged: true      # <- privileged mode is mandentory.
      volumes:
      - name: nfs-storage
        persistentVolumeClaim:
          claimName: nfs-server-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server-service
  namespace: bitwarden
spec:
  selector:
    app: nfs-server
  ports:
  - port: 2049
    targetPort: 2049
